--- a/deploy/nginx.yaml
+++ b/deploy/nginx.yaml
@@ -16,3 +16,15 @@ spec:
           image: nginx:latest
           ports:
             - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  type: NodePort
+  ports:
+    - port: 80     # 该服务的可用端口，即对外提供的端口
+      targetPort: 80   # 服务将连接转发到的容器端口
+  selector:
+    app: my-nginx
