--- a/deploy/nginx.yaml
+++ b/deploy/nginx.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: my-nginx
-          image: nginx:latest
+          image: nginx:1.8
           ports:
             - containerPort: 80
 ---
